Wallet Connect: fixed z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -154,7 +154,7 @@ data-testid[ockConnectAccountButtonInner] {
   position: relative;
   overflow: hidden;  /* Ensures the pseudo-element does not extend outside the box */
   margin: 50px;
-  z-index: 1000;
+  z-index: 100;
   opacity: 1;
   box-shadow: 0px -20px 75px 40px rgba(255, 212, 62, 0.2);
 }
